--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -7,19 +7,27 @@
   padding: 60px 0 50px;
   background-color: var(--footer-bg);
   color: var(--footer-text);
-}
 
-.footer__wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  row-gap: 27px;
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 27px;
+  }
 }
 
 .social {
   display: flex;
   column-gap: 30px;
   align-items: center;
+
+  &__item {
+    transition: all 0.3s;
+
+    &:hover {
+      scale: 1.1
+    }
+  }
 }
 
 .copyright {
